Update branding and French localization

--- a/our-story.html
+++ b/our-story.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr-CA">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title data-i18n="page.title">Our Story | Beyond the Reef Mexico</title>
+  <title data-i18n="page.title">Notre histoire | Québec Mexique</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -13,29 +13,28 @@
 <body data-page="story">
   <header class="site-header">
     <nav class="nav" aria-label="Primary" data-i18n="nav.primary" data-i18n-attr="aria-label">
-      <a class="nav__logo" href="index.html" aria-label="Beyond the Reef Mexico">
+      <a class="nav__logo" href="index.html" aria-label="Québec Mexique">
         <span class="nav__logo-icon" aria-hidden="true">
-          <img src="assets/logo.svg" alt="" decoding="async" />
+          <img src="https://i.ibb.co/Qvvzh9dX/QUEBECMEXIQUE-LOGO.jpg" alt="" decoding="async" />
         </span>
         <span class="nav__logo-text">
-          <span class="nav__logo-title">Beyond the Reef</span>
-          <span class="nav__logo-subtitle">Mexico</span>
+          <span class="nav__logo-title">Québec</span>
+          <span class="nav__logo-subtitle">Mexique</span>
         </span>
       </a>
       <button class="nav__toggle" type="button" aria-expanded="false" aria-controls="primary-navigation" data-nav-toggle>
-        <span class="sr-only" data-i18n="nav.toggle">Toggle navigation</span>
+        <span class="sr-only" data-i18n="nav.toggle">Basculer la navigation</span>
         <span></span>
         <span></span>
         <span></span>
       </button>
       <ul class="nav__links" id="primary-navigation">
-        <li><a href="index.html" data-i18n="nav.home">Home</a></li>
+        <li><a href="index.html" data-i18n="nav.home">Accueil</a></li>
         <li><a href="build-your-tours.html" data-i18n="nav.create">Excursions</a></li>
-        <li><a href="review.html" data-i18n="nav.reviews">Reviews</a></li>
-        <li><a href="our-story.html" aria-current="page" data-i18n="nav.story">Our Story</a></li>
+        <li><a href="review.html" data-i18n="nav.reviews">Avis</a></li>
+        <li><a href="our-story.html" aria-current="page" data-i18n="nav.story">Notre histoire</a></li>
       </ul>
-      <button class="nav__control language-toggle" type="button" data-language-toggle aria-pressed="false">Español 🇲🇽</button>
-      <button class="nav__control theme-toggle" type="button" data-theme-toggle aria-pressed="false">Dark mode</button>
+      <button class="nav__control theme-toggle" type="button" data-theme-toggle aria-pressed="false">Mode sombre</button>
     </nav>
   </header>
 
@@ -58,7 +57,7 @@
     </section>
 
     <section class="page-section story-intro">
-      <h2 data-i18n="story.intro.heading">Beyond The Reef Mexico</h2>
+      <h2 data-i18n="story.intro.heading">Québec Mexique</h2>
       <div class="story-message">
         <p data-i18n="story.intro.p1">Our company was born from a simple realization: travel experiences had become rushed, impersonal, and disconnected.</p>
         <p data-i18n="story.intro.p2">We knew there had to be a better way.</p>
@@ -92,7 +91,7 @@
   <footer class="site-footer">
     <p>
       &copy; <span id="current-year"></span>
-      <span data-i18n="footer.rights">Beyond the Reef Mexico. All rights reserved.</span>
+      <span data-i18n="footer.rights">Québec Mexique. Tous droits réservés.</span>
     </p>
   </footer>
 
@@ -128,7 +127,7 @@
     <a
       class="floating-contact__link floating-contact__link--email"
       href="mailto:info@beyondthereefmexico.com"
-      aria-label="Email Beyond the Reef"
+      aria-label="Email Québec Mexique"
       data-i18n="floatingContact.emailAria"
       data-i18n-attr="aria-label"
     >
