--- a/review.html
+++ b/review.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr-CA">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title data-i18n="page.title">Guest Reviews | Beyond the Reef Mexico</title>
+  <title data-i18n="page.title">Avis des voyageurs | Québec Mexique</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -13,29 +13,28 @@
 <body data-page="reviews">
   <header class="site-header">
     <nav class="nav" aria-label="Primary" data-i18n="nav.primary" data-i18n-attr="aria-label">
-      <a class="nav__logo" href="index.html" aria-label="Beyond the Reef Mexico">
+      <a class="nav__logo" href="index.html" aria-label="Québec Mexique">
         <span class="nav__logo-icon" aria-hidden="true">
-          <img src="assets/logo.svg" alt="" decoding="async" />
+          <img src="https://i.ibb.co/Qvvzh9dX/QUEBECMEXIQUE-LOGO.jpg" alt="" decoding="async" />
         </span>
         <span class="nav__logo-text">
-          <span class="nav__logo-title">Beyond the Reef</span>
-          <span class="nav__logo-subtitle">Mexico</span>
+          <span class="nav__logo-title">Québec</span>
+          <span class="nav__logo-subtitle">Mexique</span>
         </span>
       </a>
       <button class="nav__toggle" type="button" aria-expanded="false" aria-controls="primary-navigation" data-nav-toggle>
-        <span class="sr-only" data-i18n="nav.toggle">Toggle navigation</span>
+        <span class="sr-only" data-i18n="nav.toggle">Basculer la navigation</span>
         <span></span>
         <span></span>
         <span></span>
       </button>
       <ul class="nav__links" id="primary-navigation">
-        <li><a href="index.html" data-i18n="nav.home">Home</a></li>
+        <li><a href="index.html" data-i18n="nav.home">Accueil</a></li>
         <li><a href="build-your-tours.html" data-i18n="nav.create">Excursions</a></li>
-        <li><a href="review.html" aria-current="page" data-i18n="nav.reviews">Reviews</a></li>
-        <li><a href="our-story.html" data-i18n="nav.story">Our Story</a></li>
+        <li><a href="review.html" aria-current="page" data-i18n="nav.reviews">Avis</a></li>
+        <li><a href="our-story.html" data-i18n="nav.story">Notre histoire</a></li>
       </ul>
-      <button class="nav__control language-toggle" type="button" data-language-toggle aria-pressed="false">Español 🇲🇽</button>
-      <button class="nav__control theme-toggle" type="button" data-theme-toggle aria-pressed="false">Dark mode</button>
+      <button class="nav__control theme-toggle" type="button" data-theme-toggle aria-pressed="false">Mode sombre</button>
     </nav>
   </header>
 
@@ -61,7 +60,7 @@
       <div class="review-list">
         <article class="review-card">
           <h3 data-i18n="reviews.featured.one.title">“They thought of every detail.”</h3>
-          <p data-i18n="reviews.featured.one.copy" data-i18n-attr="html">“From the midnight manta ray swim to the surprise anniversary dinner on a sandbar, the Beyond the Reef team went above and beyond. We never looked at our watches once.” - <strong>Cam &amp; Jordan</strong></p>
+          <p data-i18n="reviews.featured.one.copy" data-i18n-attr="html">“From the midnight manta ray swim to the surprise anniversary dinner on a sandbar, the Québec Mexique team went above and beyond. We never looked at our watches once.” - <strong>Cam &amp; Jordan</strong></p>
         </article>
         <article class="review-card">
           <h3 data-i18n="reviews.featured.two.title">“Planning was actually fun.”</h3>
@@ -69,7 +68,7 @@
         </article>
         <article class="review-card">
           <h3 data-i18n="reviews.featured.three.title">“Our friends are still raving.”</h3>
-          <p data-i18n="reviews.featured.three.copy" data-i18n-attr="html">“The group chat was blowing up with ideas. The Beyond the Reef planner kept everything organized and even added mixology classes based on our Spotify playlist.” - <strong>Diego &amp; crew</strong></p>
+          <p data-i18n="reviews.featured.three.copy" data-i18n-attr="html">“The group chat was blowing up with ideas. The Québec Mexique planner kept everything organized and even added mixology classes based on our Spotify playlist.” - <strong>Diego &amp; crew</strong></p>
         </article>
         <article class="review-card">
           <h3 data-i18n="reviews.featured.four.title">“Chichén Itzá made easy.”</h3>
@@ -77,7 +76,7 @@
         </article>
         <article class="review-card">
           <h3 data-i18n="reviews.featured.five.title">“Fishing with family felt effortless.”</h3>
-          <p data-i18n="reviews.featured.five.copy" data-i18n-attr="html">“Beyond the Reef stocked the cooler, handled the licenses, and matched us with a patient captain so our kids could reel in their first mahi. Zero stress, just smiles.” - <strong>The Greene crew</strong></p>
+          <p data-i18n="reviews.featured.five.copy" data-i18n-attr="html">“Québec Mexique stocked the cooler, handled the licenses, and matched us with a patient captain so our kids could reel in their first mahi. Zero stress, just smiles.” - <strong>The Greene crew</strong></p>
         </article>
         <article class="review-card">
           <h3 data-i18n="reviews.featured.six.title">“Street taco crawl perfection.”</h3>
@@ -115,18 +114,18 @@
     </section>
 
     <section class="page-section">
-      <h2 data-i18n="reviews.share.heading">Share your experience</h2>
+      <h2 data-i18n="reviews.share.heading">Partagez votre expérience</h2>
       <p
         data-i18n="reviews.share.copy"
         data-i18n-attr="html"
-      >Email <a href="mailto:info@beyondthereefmexico.com">info@beyondthereefmexico.com</a> with a highlight reel or tag us on social with <strong>#BeyondTheReef</strong> for a chance to be featured.</p>
+      >Écrivez-nous à <a href="mailto:info@beyondthereefmexico.com">info@beyondthereefmexico.com</a> avec vos meilleurs moments ou identifiez-nous avec <strong>#QuebecMexique</strong> pour avoir la chance d’apparaître.</p>
     </section>
   </main>
 
   <footer class="site-footer">
     <p>
       &copy; <span id="current-year"></span>
-      <span data-i18n="footer.rights">Beyond the Reef Mexico. All rights reserved.</span>
+      <span data-i18n="footer.rights">Québec Mexique. Tous droits réservés.</span>
     </p>
   </footer>
 
@@ -162,7 +161,7 @@
     <a
       class="floating-contact__link floating-contact__link--email"
       href="mailto:info@beyondthereefmexico.com"
-      aria-label="Email Beyond the Reef"
+      aria-label="Email Québec Mexique"
       data-i18n="floatingContact.emailAria"
       data-i18n-attr="aria-label"
     >
