--- a/tour.html
+++ b/tour.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr-CA">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title data-i18n="page.title">Beyond the Reef Mexico | Tour Details</title>
+  <title data-i18n="page.title">Québec Mexique | Détails de l’excursion</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -13,29 +13,28 @@
 <body data-page="tour-detail" data-tour-page>
   <header class="site-header">
     <nav class="nav" aria-label="Primary" data-i18n="nav.primary" data-i18n-attr="aria-label">
-      <a class="nav__logo" href="index.html" aria-label="Beyond the Reef Mexico">
+      <a class="nav__logo" href="index.html" aria-label="Québec Mexique">
         <span class="nav__logo-icon" aria-hidden="true">
-          <img src="assets/logo.svg" alt="" decoding="async" />
+          <img src="https://i.ibb.co/Qvvzh9dX/QUEBECMEXIQUE-LOGO.jpg" alt="" decoding="async" />
         </span>
         <span class="nav__logo-text">
-          <span class="nav__logo-title">Beyond the Reef</span>
-          <span class="nav__logo-subtitle">Mexico</span>
+          <span class="nav__logo-title">Québec</span>
+          <span class="nav__logo-subtitle">Mexique</span>
         </span>
       </a>
       <button class="nav__toggle" type="button" aria-expanded="false" aria-controls="primary-navigation" data-nav-toggle>
-        <span class="sr-only" data-i18n="nav.toggle">Toggle navigation</span>
+        <span class="sr-only" data-i18n="nav.toggle">Basculer la navigation</span>
         <span></span>
         <span></span>
         <span></span>
       </button>
       <ul class="nav__links" id="primary-navigation">
-        <li><a href="index.html" data-i18n="nav.home">Home</a></li>
+        <li><a href="index.html" data-i18n="nav.home">Accueil</a></li>
         <li><a href="build-your-tours.html" data-i18n="nav.create">Excursions</a></li>
-        <li><a href="review.html" data-i18n="nav.reviews">Reviews</a></li>
-        <li><a href="our-story.html" data-i18n="nav.story">Our Story</a></li>
+        <li><a href="review.html" data-i18n="nav.reviews">Avis</a></li>
+        <li><a href="our-story.html" data-i18n="nav.story">Notre histoire</a></li>
       </ul>
-      <button class="nav__control language-toggle" type="button" data-language-toggle aria-pressed="false">Español 🇲🇽</button>
-      <button class="nav__control theme-toggle" type="button" data-theme-toggle aria-pressed="false">Dark mode</button>
+      <button class="nav__control theme-toggle" type="button" data-theme-toggle aria-pressed="false">Mode sombre</button>
     </nav>
   </header>
 
@@ -249,7 +248,7 @@
     <a
       class="floating-contact__link floating-contact__link--email"
       href="mailto:info@beyondthereefmexico.com"
-      aria-label="Email Beyond the Reef Mexico"
+      aria-label="Email Québec Mexique"
       data-i18n="floatingContact.emailAria"
       data-i18n-attr="aria-label"
     >
