Update homepage styles and contact details

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
               <li data-i18n="home.builder.pointThree">You’ll receive a personalized quote or the option to connect with our team by video call.</li>
           </ul>
           <p class="custom-inquiry__email" data-i18n="home.builder.emailFallback" data-i18n-attr="html">
-            Prefer email? Reach us directly at <a href="mailto:info@beyondthereefmexico.com">info@beyondthereefmexico.com</a>.
+            Prefer email? Reach us directly at <a href="mailto:info@quebecmexique.com">info@quebecmexique.com</a>.
           </p>
         </div>
         <form
@@ -317,7 +317,7 @@
           <h2 data-i18n="home.cta.heading">Ready to build your dream tour?</h2>
           <p data-i18n="home.cta.copy">Reach out and we’ll design the right experience for you.</p>
         </div>
-        <a class="button button--primary" href="mailto:info@beyondthereefmexico.com" data-i18n="home.cta.button">Email us now</a>
+        <a class="button button--primary" href="mailto:info@quebecmexique.com" data-i18n="home.cta.button">Email us now</a>
       </div>
     </section>
 
@@ -326,7 +326,7 @@
   <footer class="site-footer">
     <p>
       &copy; <span id="current-year"></span>
-      <span data-i18n="footer.rights">Québec Mexique. Tous droits réservés.</span>
+      <span data-i18n="footer.rights">© 2025 Québec Mexique (A beyondthereefmexico brand). Tous droits réservés.</span>
     </p>
   </footer>
 
@@ -361,7 +361,7 @@
     </a>
     <a
       class="floating-contact__link floating-contact__link--email"
-      href="mailto:info@beyondthereefmexico.com"
+      href="mailto:info@quebecmexique.com"
       aria-label="Email Québec Mexique"
       data-i18n="floatingContact.emailAria"
       data-i18n-attr="aria-label"
