--- a/our-story.html
+++ b/our-story.html
@@ -89,7 +89,7 @@
   <footer class="site-footer">
     <p>
       &copy; <span id="current-year"></span>
-      <span data-i18n="footer.rights">Québec Mexique. Tous droits réservés.</span>
+      <span data-i18n="footer.rights">© 2025 Québec Mexique (A beyondthereefmexico brand). Tous droits réservés.</span>
     </p>
   </footer>
 
@@ -124,7 +124,7 @@
     </a>
     <a
       class="floating-contact__link floating-contact__link--email"
-      href="mailto:info@beyondthereefmexico.com"
+      href="mailto:info@quebecmexique.com"
       aria-label="Email Québec Mexique"
       data-i18n="floatingContact.emailAria"
       data-i18n-attr="aria-label"
