--- a/review.html
+++ b/review.html
@@ -116,14 +116,14 @@
       <p
         data-i18n="reviews.share.copy"
         data-i18n-attr="html"
-      >Écrivez-nous à <a href="mailto:info@beyondthereefmexico.com">info@beyondthereefmexico.com</a> avec vos meilleurs moments ou identifiez-nous avec <strong>#QuebecMexique</strong> pour avoir la chance d’apparaître.</p>
+      >Écrivez-nous à <a href="mailto:info@quebecmexique.com">info@quebecmexique.com</a> avec vos meilleurs moments ou identifiez-nous avec <strong>#QuebecMexique</strong> pour avoir la chance d’apparaître.</p>
     </section>
   </main>
 
   <footer class="site-footer">
     <p>
       &copy; <span id="current-year"></span>
-      <span data-i18n="footer.rights">Québec Mexique. Tous droits réservés.</span>
+      <span data-i18n="footer.rights">© 2025 Québec Mexique (A beyondthereefmexico brand). Tous droits réservés.</span>
     </p>
   </footer>
 
@@ -158,7 +158,7 @@
     </a>
     <a
       class="floating-contact__link floating-contact__link--email"
-      href="mailto:info@beyondthereefmexico.com"
+      href="mailto:info@quebecmexique.com"
       aria-label="Email Québec Mexique"
       data-i18n="floatingContact.emailAria"
       data-i18n-attr="aria-label"
