--- a/tour.html
+++ b/tour.html
@@ -245,7 +245,7 @@
     </a>
     <a
       class="floating-contact__link floating-contact__link--email"
-      href="mailto:info@beyondthereefmexico.com"
+      href="mailto:info@quebecmexique.com"
       aria-label="Email Québec Mexique"
       data-i18n="floatingContact.emailAria"
       data-i18n-attr="aria-label"
