--- a/index.html
+++ b/index.html
@@ -115,6 +115,14 @@
       </div>
     </section>
 
+    <section class="promo-banner" aria-label="Promotion mercredi">
+      <div class="promo-banner__content">
+        <span class="promo-banner__eyebrow">Promo mercredi</span>
+        <h2>Tour de tortue et cenote pour 89$</h2>
+        <p>Offre éclatante chaque mercredi : places limitées pour une aventure colorée.</p>
+      </div>
+    </section>
+
     <section class="section section--difference" aria-labelledby="difference-heading">
       <div class="difference">
         <div class="section__intro difference__intro">
