--- a/index.html
+++ b/index.html
@@ -116,10 +116,14 @@
     </section>
 
     <section class="promo-banner" aria-label="Promotion mercredi">
+      <div class="promo-banner__price" aria-hidden="true">
+        <span>89 $</span>
+      </div>
       <div class="promo-banner__content">
         <span class="promo-banner__eyebrow">Promo mercredi</span>
-        <h2>Tour de tortue et cenote pour 89$</h2>
+        <h2>Tour de tortue et cenote</h2>
         <p>Offre éclatante chaque mercredi : places limitées pour une aventure colorée.</p>
+        <a class="button promo-banner__cta" href="promo-mercredi.html">Cliquez pour plus d&apos;information</a>
       </div>
     </section>
 
