Update promo banner layout and spacing

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <section class="promo-banner" aria-label="Promotion mercredi">
       <div class="promo-banner__price" aria-hidden="true">
-        <span>89 $</span>
+        <img src="assets/89usd.png" alt="" />
       </div>
       <div class="promo-banner__content">
         <span class="promo-banner__eyebrow">Promo mercredi</span>
