Update promo tour details and slider styling

--- a/promo-mercredi.html
+++ b/promo-mercredi.html
@@ -84,6 +84,23 @@
             <h4 data-i18n="tour.details.includes">What&apos;s included</h4>
             <ul class="tour-includes__list" data-tour-includes></ul>
           </div>
+          <div class="tour-extras">
+            <div class="tour-extras__media">
+              <img src="assets/TurtlePromo/turtlepromobanner.jpg" alt="Tortues et cenote" loading="lazy" decoding="async" />
+              <img src="assets/TurtlePromo/89usd.png" alt="Photos et vidéos en option" loading="lazy" decoding="async" />
+            </div>
+            <div class="tour-extras__content">
+              <h4>Photos &amp; vidéos</h4>
+              <p>Photos et vidéos avec les tortues et le cenote pour seulement 25&nbsp;$ par couple.</p>
+            </div>
+          </div>
+          <div class="tour-excludes">
+            <h4>Ce qui n’est pas inclus</h4>
+            <ul class="tour-excludes__list">
+              <li>Pourboires pour le personnel (recommandé 10 à 20&nbsp;%).</li>
+              <li>Taxe de préservation d’Akumal : 20&nbsp;$ USD ou 400&nbsp;MXN.</li>
+            </ul>
+          </div>
         </article>
         <aside class="card tour-details__panel tour-details__panel--booking">
           <div class="tour-booking__header">
