Update promo mercredi labels and copy

--- a/promo-mercredi.html
+++ b/promo-mercredi.html
@@ -87,7 +87,7 @@
           <div class="tour-extras">
             <div class="tour-extras__content">
               <h4>Photos &amp; vidéos</h4>
-              <p>Photos et vidéos avec les tortues et le cenote pour seulement 25&nbsp;$ par couple.</p>
+              <p>Photos et vidéos avec les tortues et le cenote pour seulement 25&nbsp;$ par couple en promo mercredi au lieu de 89&nbsp;$.</p>
             </div>
           </div>
           <div class="tour-excludes">
@@ -95,6 +95,7 @@
             <ul class="tour-excludes__list">
               <li>Pourboires pour le personnel (recommandé 10 à 20&nbsp;%).</li>
               <li>Taxe de préservation d’Akumal : 20&nbsp;$ USD ou 400&nbsp;MXN.</li>
+              <li>Photos et vidéos avec les tortues et le cenote pour seulement 25&nbsp;$ par couple en promo mercredi au lieu de 89&nbsp;$.</li>
             </ul>
           </div>
         </article>
@@ -103,10 +104,9 @@
             <p class="tour-booking__label" data-i18n="tour.booking.label">Reserve now</p>
             <div class="tour-booking__price-block">
               <p class="tour-booking__price">
-                <span data-i18n="tour.booking.from">From</span> <strong data-tour-price>$0</strong> <span data-i18n="tour.booking.currency">USD</span>
-                <span class="tour-booking__per-person" data-i18n="tour.booking.perPerson">per person</span>
+                Seulement <strong data-tour-price>$0</strong> <span data-i18n="tour.booking.currency">USD</span>
+                <span class="tour-booking__per-person">par personne</span>
               </p>
-              <p class="tour-booking__helper" data-i18n="tour.booking.helper">Prices drop as you add more people.</p>
             </div>
           </div>
           <form class="tour-booking" data-tour-booking>
