Point promo mercredi links to local file

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <span class="promo-banner__eyebrow">Promo mercredi</span>
         <h2>Tour de tortue et cenote</h2>
         <p>Offre éclatante chaque mercredi : places limitées pour une aventure colorée.</p>
-        <a class="button promo-banner__cta" href="promo-mercredi.html">Cliquez pour plus d&apos;information</a>
+        <a class="button promo-banner__cta" href="file:///Users/Aluxka/Documents/GitHub/quebecmexique/promo-mercredi.html">Cliquez pour plus d&apos;information</a>
       </div>
     </section>
 
