--- a/review.html
+++ b/review.html
@@ -57,56 +57,56 @@
       <h2 data-i18n="reviews.featured.heading">Featured reviews</h2>
       <div class="review-list">
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.one.title">“They thought of every detail.”</h3>
-          <p data-i18n="reviews.featured.one.copy" data-i18n-attr="html">“From the midnight manta ray swim to the surprise anniversary dinner on a sandbar, the Québec Mexique team went above and beyond. We never looked at our watches once.” - <strong>Cam &amp; Jordan</strong></p>
+          <h3 data-i18n="reviews.featured.one.title">“Des visites parfaites du début à la fin.”</h3>
+          <p data-i18n="reviews.featured.one.copy" data-i18n-attr="html">“Nos excursions étaient impeccables, et notre guide francophone expliquait tout avec une énergie contagieuse. On s’est laissés porter sans jamais se soucier de l’horaire.” - <strong>Marie-Ève &amp; Simon</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.two.title">“Planning was actually fun.”</h3>
-          <p data-i18n="reviews.featured.two.copy" data-i18n-attr="html">“We built the itinerary together during a video call and could see availability update live. Their concierge secured a private guide for my dad so he could explore at his own pace.” - <strong>Riya</strong></p>
+          <h3 data-i18n="reviews.featured.two.title">“Planifier avec eux, c’était un plaisir.”</h3>
+          <p data-i18n="reviews.featured.two.copy" data-i18n-attr="html">“On a créé notre itinéraire avec l’équipe, puis un guide francophone privé a pris le relais pour mon père. Les tours étaient fluides et vraiment adaptés à notre rythme.” - <strong>Antoine</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.three.title">“Our friends are still raving.”</h3>
-          <p data-i18n="reviews.featured.three.copy" data-i18n-attr="html">“The group chat was blowing up with ideas. The Québec Mexique planner kept everything organized and even added mixology classes based on our Spotify playlist.” - <strong>Diego &amp; crew</strong></p>
+          <h3 data-i18n="reviews.featured.three.title">“Nos amis en parlent encore.”</h3>
+          <p data-i18n="reviews.featured.three.copy" data-i18n-attr="html">“On était un groupe de Québec, et chaque tour était bien rythmé. Les guides francophones ont mis tout le monde à l’aise et ont répondu à toutes nos questions.” - <strong>Félix &amp; la gang</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.four.title">“Chichén Itzá made easy.”</h3>
-          <p data-i18n="reviews.featured.four.copy" data-i18n-attr="html">“They arranged a sunrise entry so we had El Castillo almost to ourselves, plus a history-loving guide who knew every story. Breakfast tacos afterward were the best.” - <strong>Mariela &amp; Tomás</strong></p>
+          <h3 data-i18n="reviews.featured.four.title">“Chichén Itzá sans stress.”</h3>
+          <p data-i18n="reviews.featured.four.copy" data-i18n-attr="html">“Visite à l’aube, transport confortable et un guide francophone qui connaissait chaque détail historique. C’était l’excursion parfaite pour nous.” - <strong>Émilie &amp; Maxime</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.five.title">“Fishing with family felt effortless.”</h3>
-          <p data-i18n="reviews.featured.five.copy" data-i18n-attr="html">“Québec Mexique stocked the cooler, handled the licenses, and matched us with a patient captain so our kids could reel in their first mahi. Zero stress, just smiles.” - <strong>The Greene crew</strong></p>
+          <h3 data-i18n="reviews.featured.five.title">“La promo mercredi vaut de l’or.”</h3>
+          <p data-i18n="reviews.featured.five.copy" data-i18n-attr="html">“On a profité de la promo mercredi pour une sortie en mer, et notre guide francophone a rendu l’excursion super agréable. Service impeccable et prix imbattable.” - <strong>Karine &amp; Olivier</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.six.title">“Street taco crawl perfection.”</h3>
-          <p data-i18n="reviews.featured.six.copy" data-i18n-attr="html">“We ate our way through downtown—pastor, cochinita, birria—and never waited in line. Our host knew the vendors by name and even got my vegan friend amazing options.” - <strong>Avery</strong></p>
+          <h3 data-i18n="reviews.featured.six.title">“Tournée gourmande au top.”</h3>
+          <p data-i18n="reviews.featured.six.copy" data-i18n-attr="html">“Notre guide francophone nous a fait découvrir les meilleures adresses et a bien expliqué chaque spécialité. Le tour culinaire était organisé au quart de tour.” - <strong>Gabrielle</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.seven.title">“Cenote swim with no crowds.”</h3>
-          <p data-i18n="reviews.featured.seven.copy" data-i18n-attr="html">“They found a hidden cenote and timed our arrival between buses. We floated in crystal water with just birds overhead. Towels, snacks, and photos were all handled.” - <strong>Jess &amp; Priya</strong></p>
+          <h3 data-i18n="reviews.featured.seven.title">“Cénote tranquille, guide attentionné.”</h3>
+          <p data-i18n="reviews.featured.seven.copy" data-i18n-attr="html">“On a évité les foules grâce à leur organisation, et notre guide francophone a pris le temps de tout expliquer. Une excursion zen et mémorable.” - <strong>Laurence &amp; Vincent</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.eight.title">“Snorkeling that felt like a documentary.”</h3>
-          <p data-i18n="reviews.featured.eight.copy" data-i18n-attr="html">“Our guide pointed out turtles, rays, and even a shy seahorse. Gear fit perfectly and the boat had shade, which my dad appreciated. We felt cared for start to finish.” - <strong>Samir</strong></p>
+          <h3 data-i18n="reviews.featured.eight.title">“Snorkeling digne d’un documentaire.”</h3>
+          <p data-i18n="reviews.featured.eight.copy" data-i18n-attr="html">“Le guide francophone était passionné et nous a montré les plus beaux spots. Tout était bien encadré, on s’est sentis en confiance du début à la fin.” - <strong>Julien</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.nine.title">“Romantic taco night on the beach.”</h3>
-          <p data-i18n="reviews.featured.nine.copy" data-i18n-attr="html">“They turned a simple craving into a whole evening: chef-grilled tacos, aguas frescas, and fairy lights under the palms. It was our favorite date of the trip.” - <strong>Lena &amp; Marco</strong></p>
+          <h3 data-i18n="reviews.featured.nine.title">“Promo mercredi et soirée magique.”</h3>
+          <p data-i18n="reviews.featured.nine.copy" data-i18n-attr="html">“On a réservé une sortie grâce à la promo mercredi, et c’était incroyable. Guide francophone chaleureux, tour bien organisé et un moment romantique sur la plage.” - <strong>Maude &amp; Étienne</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.ten.title">“Accessible adventure done right.”</h3>
-          <p data-i18n="reviews.featured.ten.copy" data-i18n-attr="html">“I use a wheelchair, and they coordinated ramps, transport, and a calm guide for exploring Tulum. I never had to explain twice—everything just worked.” - <strong>Natalie</strong></p>
+          <h3 data-i18n="reviews.featured.ten.title">“Aventure accessible et bien encadrée.”</h3>
+          <p data-i18n="reviews.featured.ten.copy" data-i18n-attr="html">“Tout était adapté pour moi, et le guide francophone a pris le temps de s’assurer que je sois confortable. Le tour de Tulum était exceptionnel.” - <strong>Isabelle</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.eleven.title">“Spearfishing lessons that felt personal.”</h3>
-          <p data-i18n="reviews.featured.eleven.copy" data-i18n-attr="html">“We wanted to learn safely, and they paired us with a local expert who focused on technique and reef respect. We left with new skills and a grilled catch lunch.” - <strong>Darius &amp; Cole</strong></p>
+          <h3 data-i18n="reviews.featured.eleven.title">“Cours de pêche sportive inoubliable.”</h3>
+          <p data-i18n="reviews.featured.eleven.copy" data-i18n-attr="html">“Le guide francophone nous a donné des conseils précis et a rendu l’excursion super sécuritaire. On a adoré chaque minute du tour.” - <strong>Philippe &amp; Hugo</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.twelve.title">“Kids loved the lagoon night tour.”</h3>
-          <p data-i18n="reviews.featured.twelve.copy" data-i18n-attr="html">“Bioluminescence, storytelling, and hot chocolate on deck—every detail was thought through. Even our teenager put the phone away to watch the stars.” - <strong>Ruth &amp; family</strong></p>
+          <h3 data-i18n="reviews.featured.twelve.title">“Promo mercredi = meilleure soirée.”</h3>
+          <p data-i18n="reviews.featured.twelve.copy" data-i18n-attr="html">“Grâce à la promo mercredi, on a vécu une sortie nocturne fantastique. Notre guide francophone a raconté des histoires captivantes et les enfants étaient émerveillés.” - <strong>Amélie &amp; famille</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.thirteen.title">“Foodie day from market to mezcal.”</h3>
-          <p data-i18n="reviews.featured.thirteen.copy" data-i18n-attr="html">“We started at the local market for spices, took a cooking class, and ended with a mezcal tasting led by a maestro. It felt authentic, not touristy.” - <strong>Eduardo</strong></p>
+          <h3 data-i18n="reviews.featured.thirteen.title">“Journée gourmande authentique.”</h3>
+          <p data-i18n="reviews.featured.thirteen.copy" data-i18n-attr="html">“Marché local, atelier cuisine et dégustation : un tour bien rempli. Le guide francophone connaissait tout le monde et nous a fait vivre le Mexique autrement.” - <strong>Chantal</strong></p>
         </article>
       </div>
     </section>
