Refresh reviews with new tour highlights

--- a/review.html
+++ b/review.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title data-i18n="page.title">Avis des voyageurs | Québec Mexique</title>
+  <title data-i18n="page.title">Ce que nos clients disent de nous | Québec Mexique</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -30,7 +30,7 @@
       <ul class="nav__links" id="primary-navigation">
         <li><a href="index.html" data-i18n="nav.home">Accueil</a></li>
         <li><a href="build-your-tours.html" data-i18n="nav.create">Excursions</a></li>
-        <li><a href="review.html" aria-current="page" data-i18n="nav.reviews">Avis</a></li>
+        <li><a href="review.html" aria-current="page" data-i18n="nav.reviews">Ce que nos clients disent de nous</a></li>
         <li><a href="our-story.html" data-i18n="nav.story">Notre histoire</a></li>
       </ul>
     </nav>
@@ -54,59 +54,59 @@
     </section>
 
     <section class="page-section">
-      <h2 data-i18n="reviews.featured.heading">Featured reviews</h2>
+      <h2 data-i18n="reviews.featured.heading">Ce que nos clients disent de nous</h2>
       <div class="review-list">
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.one.title">“Des visites parfaites du début à la fin.”</h3>
-          <p data-i18n="reviews.featured.one.copy" data-i18n-attr="html">“Nos excursions étaient impeccables, et notre guide francophone expliquait tout avec une énergie contagieuse. On s’est laissés porter sans jamais se soucier de l’horaire.” - <strong>Marie-Ève &amp; Simon</strong></p>
+          <h3 data-i18n="reviews.featured.one.title">“Nager avec les tortues, quel moment.”</h3>
+          <p data-i18n="reviews.featured.one.copy" data-i18n-attr="html">“Le tour des tortues était incroyable, et notre guide francophone connaissait les meilleurs endroits. On s’est sentis en sécurité et bien informés.” - <strong>Élise &amp; Mathieu</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.two.title">“Planifier avec eux, c’était un plaisir.”</h3>
-          <p data-i18n="reviews.featured.two.copy" data-i18n-attr="html">“On a créé notre itinéraire avec l’équipe, puis un guide francophone privé a pris le relais pour mon père. Les tours étaient fluides et vraiment adaptés à notre rythme.” - <strong>Antoine</strong></p>
+          <h3 data-i18n="reviews.featured.two.title">“Ruines mayas et guide passionné.”</h3>
+          <p data-i18n="reviews.featured.two.copy" data-i18n-attr="html">“Notre guide francophone a raconté l’histoire des ruines mayas avec un enthousiasme contagieux. L’excursion était bien rythmée et très enrichissante.” - <strong>Clara</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.three.title">“Nos amis en parlent encore.”</h3>
-          <p data-i18n="reviews.featured.three.copy" data-i18n-attr="html">“On était un groupe de Québec, et chaque tour était bien rythmé. Les guides francophones ont mis tout le monde à l’aise et ont répondu à toutes nos questions.” - <strong>Félix &amp; la gang</strong></p>
+          <h3 data-i18n="reviews.featured.three.title">“Snorkeling limpide et facile.”</h3>
+          <p data-i18n="reviews.featured.three.copy" data-i18n-attr="html">“Le snorkeling était magnifique, avec une eau claire et des poissons partout. Le guide francophone a tout expliqué avant de partir.” - <strong>Laurent &amp; Anne</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.four.title">“Chichén Itzá sans stress.”</h3>
-          <p data-i18n="reviews.featured.four.copy" data-i18n-attr="html">“Visite à l’aube, transport confortable et un guide francophone qui connaissait chaque détail historique. C’était l’excursion parfaite pour nous.” - <strong>Émilie &amp; Maxime</strong></p>
+          <h3 data-i18n="reviews.featured.four.title">“La promo mercredi vaut le détour.”</h3>
+          <p data-i18n="reviews.featured.four.copy" data-i18n-attr="html">“On a profité de la promo mercredi pour une sortie en mer, et ça a dépassé nos attentes. Le guide francophone était chaleureux et très organisé.” - <strong>Camille &amp; Hugo</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.five.title">“La promo mercredi vaut de l’or.”</h3>
-          <p data-i18n="reviews.featured.five.copy" data-i18n-attr="html">“On a profité de la promo mercredi pour une sortie en mer, et notre guide francophone a rendu l’excursion super agréable. Service impeccable et prix imbattable.” - <strong>Karine &amp; Olivier</strong></p>
+          <h3 data-i18n="reviews.featured.five.title">“Tour de dauphins libres magique.”</h3>
+          <p data-i18n="reviews.featured.five.copy" data-i18n-attr="html">“Voir les dauphins libres de si près était émouvant. Le guide francophone nous a appris à les observer sans les déranger.” - <strong>Naomie &amp; Vincent</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.six.title">“Tournée gourmande au top.”</h3>
-          <p data-i18n="reviews.featured.six.copy" data-i18n-attr="html">“Notre guide francophone nous a fait découvrir les meilleures adresses et a bien expliqué chaque spécialité. Le tour culinaire était organisé au quart de tour.” - <strong>Gabrielle</strong></p>
+          <h3 data-i18n="reviews.featured.six.title">“Cenote et snorkeling combinés.”</h3>
+          <p data-i18n="reviews.featured.six.copy" data-i18n-attr="html">“On a adoré l’excursion cenote + snorkeling. Le guide francophone était patient et prenait le temps de répondre à toutes nos questions.” - <strong>Éric</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.seven.title">“Cénote tranquille, guide attentionné.”</h3>
-          <p data-i18n="reviews.featured.seven.copy" data-i18n-attr="html">“On a évité les foules grâce à leur organisation, et notre guide francophone a pris le temps de tout expliquer. Une excursion zen et mémorable.” - <strong>Laurence &amp; Vincent</strong></p>
+          <h3 data-i18n="reviews.featured.seven.title">“Ruines mayas au lever du soleil.”</h3>
+          <p data-i18n="reviews.featured.seven.copy" data-i18n-attr="html">“Arriver tôt a tout changé, et notre guide francophone connaissait chaque détail. Le tour était bien structuré et sans stress.” - <strong>Sophie &amp; Julien</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.eight.title">“Snorkeling digne d’un documentaire.”</h3>
-          <p data-i18n="reviews.featured.eight.copy" data-i18n-attr="html">“Le guide francophone était passionné et nous a montré les plus beaux spots. Tout était bien encadré, on s’est sentis en confiance du début à la fin.” - <strong>Julien</strong></p>
+          <h3 data-i18n="reviews.featured.eight.title">“Tortues et poissons partout.”</h3>
+          <p data-i18n="reviews.featured.eight.copy" data-i18n-attr="html">“On a vu plusieurs tortues pendant le snorkeling, et l’organisation était parfaite. Le guide francophone était super rassurant.” - <strong>Isabelle &amp; Marc</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.nine.title">“Promo mercredi et soirée magique.”</h3>
-          <p data-i18n="reviews.featured.nine.copy" data-i18n-attr="html">“On a réservé une sortie grâce à la promo mercredi, et c’était incroyable. Guide francophone chaleureux, tour bien organisé et un moment romantique sur la plage.” - <strong>Maude &amp; Étienne</strong></p>
+          <h3 data-i18n="reviews.featured.nine.title">“Promo mercredi, meilleure décision.”</h3>
+          <p data-i18n="reviews.featured.nine.copy" data-i18n-attr="html">“La promo mercredi nous a permis de faire une excursion de rêve. Guide francophone attentionné et logistique impeccable.” - <strong>Valérie &amp; Thomas</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.ten.title">“Aventure accessible et bien encadrée.”</h3>
-          <p data-i18n="reviews.featured.ten.copy" data-i18n-attr="html">“Tout était adapté pour moi, et le guide francophone a pris le temps de s’assurer que je sois confortable. Le tour de Tulum était exceptionnel.” - <strong>Isabelle</strong></p>
+          <h3 data-i18n="reviews.featured.ten.title">“Sortie dauphins libres inoubliable.”</h3>
+          <p data-i18n="reviews.featured.ten.copy" data-i18n-attr="html">“Le tour des dauphins libres était respectueux et magnifique. Le guide francophone était clair sur les consignes et très rassurant.” - <strong>Mélanie</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.eleven.title">“Cours de pêche sportive inoubliable.”</h3>
-          <p data-i18n="reviews.featured.eleven.copy" data-i18n-attr="html">“Le guide francophone nous a donné des conseils précis et a rendu l’excursion super sécuritaire. On a adoré chaque minute du tour.” - <strong>Philippe &amp; Hugo</strong></p>
+          <h3 data-i18n="reviews.featured.eleven.title">“Snorkeling et sable blanc.”</h3>
+          <p data-i18n="reviews.featured.eleven.copy" data-i18n-attr="html">“Une journée parfaite avec snorkeling, plage et un guide francophone qui s’occupait de tout. On s’est sentis choyés.” - <strong>Nicolas &amp; Sarah</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.twelve.title">“Promo mercredi = meilleure soirée.”</h3>
-          <p data-i18n="reviews.featured.twelve.copy" data-i18n-attr="html">“Grâce à la promo mercredi, on a vécu une sortie nocturne fantastique. Notre guide francophone a raconté des histoires captivantes et les enfants étaient émerveillés.” - <strong>Amélie &amp; famille</strong></p>
+          <h3 data-i18n="reviews.featured.twelve.title">“Promo mercredi et snorkeling.”</h3>
+          <p data-i18n="reviews.featured.twelve.copy" data-i18n-attr="html">“On a profité de la promo mercredi pour un tour de snorkeling, et tout était super bien organisé. Le guide francophone était dynamique.” - <strong>Élodie &amp; Patrick</strong></p>
         </article>
         <article class="review-card">
-          <h3 data-i18n="reviews.featured.thirteen.title">“Journée gourmande authentique.”</h3>
-          <p data-i18n="reviews.featured.thirteen.copy" data-i18n-attr="html">“Marché local, atelier cuisine et dégustation : un tour bien rempli. Le guide francophone connaissait tout le monde et nous a fait vivre le Mexique autrement.” - <strong>Chantal</strong></p>
+          <h3 data-i18n="reviews.featured.thirteen.title">“Tortues, ruines et mer turquoise.”</h3>
+          <p data-i18n="reviews.featured.thirteen.copy" data-i18n-attr="html">“On a combiné tortues et ruines mayas dans la même semaine. Les tours étaient efficaces et le guide francophone était passionné.” - <strong>Joanie &amp; David</strong></p>
         </article>
       </div>
     </section>
