Update review labels and translations

--- a/build-your-tours.html
+++ b/build-your-tours.html
@@ -30,7 +30,7 @@
       <ul class="nav__links" id="primary-navigation">
         <li><a href="index.html" data-i18n="nav.home">Accueil</a></li>
         <li><a href="build-your-tours.html" aria-current="page" data-i18n="nav.create">Excursions</a></li>
-        <li><a href="review.html" data-i18n="nav.reviews">Avis</a></li>
+        <li><a href="review.html" data-i18n="nav.reviews">Ce que nos clients disent de nous</a></li>
         <li><a href="our-story.html" data-i18n="nav.story">Notre histoire</a></li>
       </ul>
     </nav>
