Update promo and story visuals

--- a/our-story.html
+++ b/our-story.html
@@ -56,6 +56,13 @@
 
     <section class="page-section story-intro">
       <h2 data-i18n="story.intro.heading">Québec Mexique</h2>
+      <img
+        class="story-intro__logo"
+        src="https://i.ibb.co/Qvvzh9dX/QUEBECMEXIQUE-LOGO.jpg"
+        alt="Logo Québec Mexique"
+        loading="lazy"
+        decoding="async"
+      />
       <div class="story-message">
         <p data-i18n="story.intro.p1">Our company was born from a simple realization: travel experiences had become rushed, impersonal, and disconnected.</p>
         <p data-i18n="story.intro.p2">We knew there had to be a better way.</p>
