Improve mobile layout and update Instagram link

--- a/review.html
+++ b/review.html
@@ -176,7 +176,7 @@
     </a>
     <a
       class="floating-contact__link floating-contact__link--instagram"
-      href="https://www.instagram.com/beyondthereefmexico"
+      href="https://www.instagram.com/quebecmexique"
       target="_blank"
       rel="noopener noreferrer"
       aria-label="Open Instagram"
