Improve SEO metadata across pages

--- a/build-your-tours.html
+++ b/build-your-tours.html
@@ -3,6 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta
+    name="description"
+    content="Créez votre excursion privée au Mexique avec Québec Mexique : cenotes, snorkeling, ruines mayas, plages et itinéraires personnalisés."
+  />
+  <meta name="robots" content="index, follow" />
+  <meta property="og:title" content="Excursions & Private Tours | Québec Mexique" />
+  <meta
+    property="og:description"
+    content="Composez votre aventure sur la Riviera Maya avec un guide francophone, des horaires flexibles et un service haut de gamme."
+  />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="fr_CA" />
+  <meta property="og:site_name" content="Québec Mexique" />
+  <meta name="twitter:card" content="summary_large_image" />
   <title data-i18n="page.title">Excursions &amp; Private Tours | Québec Mexique</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
