--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta
+    name="description"
+    content="Québec Mexique propose des excursions privées francophones sur la Riviera Maya : cenotes, tortues, ruines mayas et aventures sur mesure en petit groupe."
+  />
+  <meta name="robots" content="index, follow" />
+  <meta property="og:title" content="Québec Mexique | Excursions privées sur la Riviera Maya" />
+  <meta
+    property="og:description"
+    content="Excursions privées francophones avec guides passionnés : cenotes, tortues, lagunes et sites mayas, sans foules et à votre rythme."
+  />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="fr_CA" />
+  <meta property="og:site_name" content="Québec Mexique" />
+  <meta name="twitter:card" content="summary_large_image" />
   <title data-i18n="page.title">Québec Mexique</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
