--- a/our-story.html
+++ b/our-story.html
@@ -3,6 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta
+    name="description"
+    content="Apprenez l'histoire de Québec Mexique : une équipe passionnée qui crée des excursions privées sur mesure en Riviera Maya."
+  />
+  <meta name="robots" content="index, follow" />
+  <meta property="og:title" content="Notre histoire | Québec Mexique" />
+  <meta
+    property="og:description"
+    content="Découvrez notre mission, nos valeurs et notre passion pour des excursions privées authentiques au Mexique."
+  />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="fr_CA" />
+  <meta property="og:site_name" content="Québec Mexique" />
+  <meta name="twitter:card" content="summary_large_image" />
   <title data-i18n="page.title">Notre histoire | Québec Mexique</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
