--- a/promo-mercredi.html
+++ b/promo-mercredi.html
@@ -3,6 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta
+    name="description"
+    content="Promo mercredi : tour de tortues et cenote avec Québec Mexique. Places limitées, guide francophone et expérience privée sur la Riviera Maya."
+  />
+  <meta name="robots" content="index, follow" />
+  <meta property="og:title" content="Québec Mexique | Promo mercredi" />
+  <meta
+    property="og:description"
+    content="Offre spéciale du mercredi : nage avec les tortues, cenote et service privé pour une journée inoubliable au Mexique."
+  />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="fr_CA" />
+  <meta property="og:site_name" content="Québec Mexique" />
+  <meta name="twitter:card" content="summary_large_image" />
   <title>Québec Mexique | Promo mercredi</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
