--- a/review.html
+++ b/review.html
@@ -3,6 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta
+    name="description"
+    content="Découvrez les avis clients de Québec Mexique : excursions privées, guides francophones, service attentionné et expériences 5 étoiles."
+  />
+  <meta name="robots" content="index, follow" />
+  <meta property="og:title" content="Avis clients | Québec Mexique" />
+  <meta
+    property="og:description"
+    content="Retours d'expérience sur nos excursions privées au Mexique : satisfaction, sécurité et moments mémorables."
+  />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="fr_CA" />
+  <meta property="og:site_name" content="Québec Mexique" />
+  <meta name="twitter:card" content="summary_large_image" />
   <title data-i18n="page.title">Ce que nos clients disent de nous | Québec Mexique</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
