--- a/tour.html
+++ b/tour.html
@@ -3,6 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta
+    name="description"
+    content="Détails des excursions privées Québec Mexique : itinéraires, activités, inclusions et conseils pour une aventure sur mesure."
+  />
+  <meta name="robots" content="index, follow" />
+  <meta property="og:title" content="Détails de l’excursion | Québec Mexique" />
+  <meta
+    property="og:description"
+    content="Consultez les détails de nos excursions privées en Riviera Maya : horaires flexibles, guides francophones et service premium."
+  />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="fr_CA" />
+  <meta property="og:site_name" content="Québec Mexique" />
+  <meta name="twitter:card" content="summary_large_image" />
   <title data-i18n="page.title">Québec Mexique | Détails de l’excursion</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
