--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <span class="promo-banner__eyebrow">Promo mercredi</span>
         <h2>Tour de tortue et cenote</h2>
         <p>Offre éclatante chaque mercredi : places limitées pour une aventure colorée.</p>
-        <a class="button promo-banner__cta" href="promo-mercredi.html">Cliquez pour plus d&apos;information</a>
+        <a class="button promo-banner__cta" href="tour.html?tour=promo-mercredi">Cliquez pour plus d&apos;information</a>
       </div>
     </section>
 
